--- a/Presenter Pro.glyphsReporter/Contents/Info.plist
+++ b/Presenter Pro.glyphsReporter/Contents/Info.plist
@@ -3,52 +3,52 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>20F71</string>
+	<string>21G419</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
 	<string>Presenter Pro</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.markfromberg.Presenter-Pro</string>
+	<string>com.markfromberg.Presenter_Pro</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>Presenter Pro</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1.2</string>
+	<string>1.2</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>4</string>
+	<string>5</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>12B45b</string>
+	<string>14A400</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>11.0</string>
+	<string>12.3</string>
 	<key>DTSDKBuild</key>
-	<string>20A2408</string>
+	<string>21E226</string>
 	<key>DTSDKName</key>
-	<string>macosx11.0</string>
+	<string>macosx12.3</string>
 	<key>DTXcode</key>
-	<string>1220</string>
+	<string>1401</string>
 	<key>DTXcodeBuild</key>
-	<string>12B45b</string>
+	<string>14A400</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.13</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>© 2021 markfromberg.com | All rights reserved.</string>
+	<string>© 2023 markfromberg.com | All rights reserved.</string>
 	<key>NSPrincipalClass</key>
-	<string>Presenter</string>
+	<string>MFPresenter</string>
 	<key>UpdateFeedURL</key>
-	<string>https:</string>
+	<string>https://markfromberg.com</string>
 	<key>productPageURL</key>
-	<string>https:</string>
+	<string>https://markfromberg.com</string>
 	<key>productReleaseNotes</key>
-	<string>Enjoy this update</string>
+	<string>Enjoy this update. See more at https://markfromberg.com</string>
 </dict>
 </plist>
